fix: backBtn z-index

--- a/style/menu.css
+++ b/style/menu.css
@@ -68,6 +68,7 @@ body {
     color: white;
 
     cursor: pointer;
+    z-index: 1000;
 }
 
 .back-btn:hover {
